// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProForm > 📦 submit props actionsRender is one 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <a>
      test
    </a>
  </form>
</DocumentFragment>
`;

exports[`ProForm > 📦 submit props actionsRender=()=>[] 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
  </form>
</DocumentFragment>
`;

exports[`ProForm > 📦 submit props actionsRender=()=>false 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    text
  </form>
</DocumentFragment>
`;

exports[`ProForm > 📦 submit props actionsRender=false 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
  </form>
</DocumentFragment>
`;

exports[`ProForm > 📦 submit props actionsRender=false 2`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
  </form>
</DocumentFragment>
`;

exports[`ProForm > 📦 submit props render=()=>[] 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <button
      class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <span>
        提交并发布
      </span>
    </button>
  </form>
</DocumentFragment>
`;

exports[`ProForm > 📦 submitter props support resetButtonProps 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined test_button"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
      <button
        class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ProForm > 📦 submitter props support submitButtonProps 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
      <button
        class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid test_button"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;
